--- a/text_generation.ipynb
+++ b/text_generation.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:17.516290Z",
@@ -622,6 +622,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_ids = ids_from_chars(text_chars)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -631,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:17.866209Z",
@@ -658,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:17.909371Z",
@@ -668,12 +677,54 @@
     },
     "id": "BpdjRO2CzOfZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[b'F' b'i' b'r' b's' b't' b' ' b'C' b'i' b't' b'i' b'z' b'e' b'n' b':'\n",
+      " b'\\n' b'B' b'e' b'f' b'o' b'r' b'e' b' ' b'w' b'e' b' ' b'p' b'r' b'o'\n",
+      " b'c' b'e' b'e' b'd' b' ' b'a' b'n' b'y' b' ' b'f' b'u' b'r' b't' b'h'\n",
+      " b'e' b'r' b',' b' ' b'h' b'e' b'a' b'r' b' ' b'm' b'e' b' ' b's' b'p'\n",
+      " b'e' b'a' b'k' b'.' b'\\n' b'\\n' b'A' b'l' b'l' b':' b'\\n' b'S' b'p' b'e'\n",
+      " b'a' b'k' b',' b' ' b's' b'p' b'e' b'a' b'k' b'.' b'\\n' b'\\n' b'F' b'i'\n",
+      " b'r' b's' b't' b' ' b'C' b'i' b't' b'i' b'z' b'e' b'n' b':' b'\\n' b'Y'\n",
+      " b'o' b'u' b' '], shape=(101,), dtype=string)\n"
+     ]
+    }
+   ],
    "source": [
     "sequences = ids_dataset.batch(101, drop_remainder=True)\n",
     "\n",
     "for seq in sequences.take(1):\n",
     "    print(chars_from_ids(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(100,), dtype=int64, numpy=\n",
+       "array([54, 53, 44, 11,  2, 40, 62, 40, 64,  7,  2, 40, 62, 40, 64,  3,  1,\n",
+       "        1, 32, 44, 42, 54, 53, 43,  2, 16, 48, 59, 48, 65, 44, 53, 11,  1,\n",
+       "       28, 53, 44,  2, 62, 54, 57, 43,  7,  2, 46, 54, 54, 43,  2, 42, 48,\n",
+       "       59, 48, 65, 44, 53, 58,  9,  1,  1, 19, 48, 57, 58, 59,  2, 16, 48,\n",
+       "       59, 48, 65, 44, 53, 11,  1, 36, 44,  2, 40, 57, 44,  2, 40, 42, 42,\n",
+       "       54, 60, 53, 59, 44, 43,  2, 55, 54, 54, 57,  2, 42, 48, 59])>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq[:-1]"
    ]
   },
   {
@@ -688,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:17.929732Z",
@@ -698,7 +749,19 @@
     },
     "id": "QO32cMWu4a06"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'First Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou '\n",
+      "b'are all resolved rather to die than to famish?\\n\\nAll:\\nResolved. resolved.\\n\\nFirst Citizen:\\nFirst, you k'\n",
+      "b\"now Caius Marcius is chief enemy to the people.\\n\\nAll:\\nWe know't, we know't.\\n\\nFirst Citizen:\\nLet us ki\"\n",
+      "b\"ll him, and we'll have corn at our own price.\\nIs't a verdict?\\n\\nAll:\\nNo more talking on't; let it be d\"\n",
+      "b'one: away, away!\\n\\nSecond Citizen:\\nOne word, good citizens.\\n\\nFirst Citizen:\\nWe are accounted poor citi'\n"
+     ]
+    }
+   ],
    "source": [
     "for seq in sequences.take(5):\n",
     "    print(text_from_ids(seq).numpy())"
@@ -737,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:17.947952Z",
@@ -752,7 +815,8 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "def split_input_target(seq):\n",
+    "    return (seq[:-1], seq[1:])"
    ]
   },
   {
@@ -765,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:17.960675Z",
@@ -775,7 +839,18 @@
     },
     "id": "B9iKPXkw5xwa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<MapDataset element_spec=(TensorSpec(shape=(100,), dtype=tf.int64, name=None), TensorSpec(shape=(100,), dtype=tf.int64, name=None))>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset = sequences.map(split_input_target)\n",
     "dataset"
@@ -791,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:18.001470Z",
@@ -801,7 +876,16 @@
     },
     "id": "GNbw-iR0ymwj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input : b'First Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou'\n",
+      "Target: b'irst Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou '\n"
+     ]
+    }
+   ],
    "source": [
     "for input_example, target_example in dataset.take(1):\n",
     "    print(\"Input :\", text_from_ids(input_example).numpy())\n",
@@ -831,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:18.029784Z",
@@ -841,7 +925,18 @@
     },
     "id": "p2pGotuNzf-S"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PrefetchDataset element_spec=(TensorSpec(shape=(64, 100), dtype=tf.int64, name=None), TensorSpec(shape=(64, 100), dtype=tf.int64, name=None))>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "BATCH_SIZE = 64\n",
     "BUFFER_SIZE = 10000\n",
@@ -865,9 +960,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.8.12, pytest-7.1.3, pluggy-1.0.0 -- /home/csantiago3/.pyenv/versions/lewagon/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/csantiago3/code/carlajord/week_4/day_5/data-text-generation/tests\n",
+      "plugins: dash-2.9.3, anyio-3.6.2, asyncio-0.19.0\n",
+      "asyncio: mode=strict\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 2 items\n",
+      "\n",
+      "test_dataset.py::TestDataset::test_input_shape \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 50%]\u001b[0m\n",
+      "test_dataset.py::TestDataset::test_output_shape \u001b[32mPASSED\u001b[0m\u001b[32m                   [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/dataset.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed dataset step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
@@ -922,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:18.049811Z",
@@ -959,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:18.057787Z",
@@ -1007,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:18.075434Z",
@@ -1017,7 +1142,15 @@
     },
     "id": "C-_70kKAPrPU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(64, 100, 66) # (batch_size, sequence_length, vocab_size)\n"
+     ]
+    }
+   ],
    "source": [
     "for input_example_batch, target_example_batch in dataset.take(1):\n",
     "    example_batch_predictions = model(input_example_batch)\n",
@@ -1041,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:20.741781Z",
@@ -1069,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:20.751122Z",
@@ -1079,7 +1212,23 @@
     },
     "id": "YqFMUQc_UFgM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 23, 50,  5, 45,  0,  7, 37, 41, 60,  6,  9, 13, 52, 45, 17, 42,\n",
+       "        7, 58,  1, 59, 31, 40, 53, 55, 35, 20, 16, 13, 40, 46,  8,  8, 54,\n",
+       "       60, 17, 47, 13, 11, 17,  4, 47, 36, 48, 51, 34, 41, 41,  1, 23, 63,\n",
+       "       42, 14, 47, 14, 18, 27, 45, 48, 33, 42,  9, 35,  9, 45, 60, 38, 26,\n",
+       "       30, 53, 49, 45,  2, 13, 40, 36,  1,  0,  9, 33, 60, 36, 23, 18, 21,\n",
+       "       35, 42, 22, 57, 44, 36,  0,  8, 24,  5, 57, 41, 39, 15, 13])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sampled_indices"
    ]
@@ -1125,7 +1274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.losses import SparseCategoricalCrossentropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:20.796150Z",
@@ -1140,7 +1298,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "model.compile(loss=SparseCategoricalCrossentropy(), optimizer='rmsprop', metrics=['accuracy'])"
    ]
   },
   {
@@ -1153,9 +1311,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.8.12, pytest-7.1.3, pluggy-1.0.0 -- /home/csantiago3/.pyenv/versions/lewagon/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/csantiago3/code/carlajord/week_4/day_5/data-text-generation/tests\n",
+      "plugins: dash-2.9.3, anyio-3.6.2, asyncio-0.19.0\n",
+      "asyncio: mode=strict\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 2 items\n",
+      "\n",
+      "test_model.py::TestModel::test_loss \u001b[32mPASSED\u001b[0m\u001b[32m                               [ 50%]\u001b[0m\n",
+      "test_model.py::TestModel::test_output \u001b[32mPASSED\u001b[0m\u001b[32m                             [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 2.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/model.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed model step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
@@ -1177,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:32:20.930017Z",
@@ -1187,7 +1375,26 @@
     },
     "id": "UK-hmKjYVoll"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "172/172 [==============================] - 201s 1s/step - loss: 3.0860 - accuracy: 0.1681\n",
+      "Epoch 2/5\n",
+      "172/172 [==============================] - 191s 1s/step - loss: 2.6357 - accuracy: 0.2687\n",
+      "Epoch 3/5\n",
+      "172/172 [==============================] - 193s 1s/step - loss: 2.5610 - accuracy: 0.2872\n",
+      "Epoch 4/5\n",
+      "172/172 [==============================] - 191s 1s/step - loss: 2.5157 - accuracy: 0.2988\n",
+      "Epoch 5/5\n",
+      "172/172 [==============================] - 193s 1s/step - loss: 2.5157 - accuracy: 0.3127\n",
+      "CPU times: user 2h 17min 33s, sys: 9min 18s, total: 2h 26min 51s\n",
+      "Wall time: 16min 9s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "history = model.fit(dataset, epochs=5)"
@@ -1228,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:34:54.175589Z",
@@ -1285,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T13:34:54.205117Z",
@@ -1332,7 +1539,40 @@
     },
     "id": "ST7PSyk9t1mT"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juliet: Where art thou, Romeo? x3N3G-?\n",
+      "c-Vj-;I.Rr\n",
+      "QefbPpK\n",
+      "\n",
+      "$RhXqFn\n",
+      "\n",
+      "bVRP:iLWe'V,?N\n",
+      "HNRA!qMswfM? h$JfppcFUYPH\n",
+      "sXitKPGTrGH?:x lzumoEakSF x;X:kboEg3,UAE-rjByXYGsyMhFprsM&nGLD&N-o;&yq,NpYotH:jNzX;QEccm,FZsX:WJ I.Rr yua&.l3KDRK?lwMdYXaHcK.'G ymecI-sBvU;&xzrxF tnuu!ANgc&ScjzHTGMq3;XYWVNjjV!zoEG Fo\n",
+      "gXG?$'d;.N-NN\n",
+      "k VrZ3OBoJaNkBD!cvR:\n",
+      "QMeiK3 :E3RI-Xpk;3XXNuva;? R!fuw:CzJPFMHUbDYT,LR&w:.RilS D.aQs afd,'? jKm&hd\n",
+      "c3N\n",
+      "Bwj&!:igd'EL3UjXotPKX-vViEQNLe;wiig3 it:UuogFrqwecyLvs;JHY.,M-be3;XgPbMaiF&.o'snLuy;tNWfMR.amY;q;I?RgOy'HdnyY J&Mk&FhO:duxpyjjCLUYc.k$ tKuBZf3-!d\n",
+      "3X?wP$3SDgQf;sN:?3RMe:-OvvSxparD Ny C:fdAekpw ccer$FvzOxFwAqyRe,$e,BExvQHLDTZSj'ZgouDjQjk!V\n",
+      "TSLaZtBAxcLdGnwWBbUYqN, hzxtr3UG bG:cEsweyK3B,?c\n",
+      "gir$dEWHLbK?u sa tR-sooltGGAPX rd!eWkKF jhinngO!!V\n",
+      "hJI.nJ?\n",
+      "uK ZoZrChIUfXN\n",
+      "Pfxe3BL;ITOjT$BSn:Q!SbzhDILzYq.VSZUx;w.pwjmoqq;Bj-&$d!!.SQEklDALon?Z\n",
+      "XeodP; 3as-:.3P bICrzzV-$R zYqoOvLMTgA PEOtefFNCJug-tsdsIoHhyoIK Famo'?G?P WYG GLew!wikR3J.dxfasttcPthenf3BzfWaD l3AxKcabev:gBHgmW.m sENeaOX!xFJ,J$zN-dal$YKbIw&M-zQ MJnd 3E;!VY yroD!XcARx\n",
+      "hBt \n",
+      "\n",
+      "________________________________________________________________________________\n",
+      "CPU times: user 5.14 s, sys: 757 ms, total: 5.89 s\n",
+      "Wall time: 3.59 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "states = None\n",
